--- a/source/stylesheets/base.css
+++ b/source/stylesheets/base.css
@@ -73,6 +73,7 @@ ul{
 }
 .copyright {
 	height: 85px;
+	overflow: hidden;
 	text-align: center;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -98,8 +99,7 @@ ul{
     margin-left: 154px;
     text-align: left;
 }
-.git-notice{	
-    width: 725px;
+.git-notice{	 
     margin-left: 154px;
     text-align: left;
     color: #ccc;
@@ -110,6 +110,15 @@ ul{
 }
 .git-notice a:hover{
 	text-decoration: underline;
+}
+
+#gotopbtn{
+	float: right;
+	margin-right: 130px;
+}
+#gotopbtn:hover{
+	cursor: pointer;
+	color: #07695E; 
 }
 .aboutpanel {
 	margin-top: 20px;
@@ -219,7 +228,9 @@ ul{
 	border-bottom:1px solid #E0E0E0;
 }
 @media screen and (max-width: 979px) {
-
+	.adsbygoogle{
+		display:none !important;
+	}
   	.leftwrap {
   		width: 100%;
   		min-width: 0px;
@@ -276,4 +287,7 @@ ul{
 	.leftreg {
 		 margin-left: 0px !important;
 	} 
+	.about-site,.git-notice{
+		margin-left: 5px;
+	}
 }
