--- a/source/stylesheets/index.css
+++ b/source/stylesheets/index.css
@@ -73,6 +73,10 @@
 	background-color: #FFF; 
 	border-radius: 0px 0px 5px 5px;
 }
+
+.articlemsg span{
+	color: #07695F;
+}
 /*
 	box-shadow: 2px 0 5px rgba(214, 214, 215, 0.9), -2px 0 5px rgba(214, 214, 215, 0.9);*/
 .photowrap {
@@ -396,6 +400,9 @@
 .item_title i{
 	margin-left: 10px;
 	font-size: 13px;
+}
+.item_title a:visited{
+	color: #888;
 }
 .articletype{
 	color: #333;
