链接点击效果

--- a/views/articledetail.ejs
+++ b/views/articledetail.ejs
@@ -133,7 +133,7 @@ var replies = d.replies;
 									</span>
 								</div>
 								<div class="reply_content">
-									<div class="msg_content"><%- replies[i].content%></div>
+									<pre class="msg_content"><%- replies[i].content%></pre>
 								</div>
 							</div>
 						</div>
