--- a/views/partial/nav.ejs
+++ b/views/partial/nav.ejs
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button> 
  		<a class="logo navbar-brand" href="/">
- 			<img src="/images/38sr.png" border="0" align="default" alt="V2EX" width="94" height="30">
+ 			<img src="/images/38sr.png" border="0" align="default" alt="38sr" width="94" height="30">
  		</a> 
     </div>
 
