--- a/views/index.ejs
+++ b/views/index.ejs
@@ -112,15 +112,20 @@
 			<div style="clear:both">
 			</div>
 		</div>
-		<div id="tags-bar">
-				<ul class="tag-list">			
-					<li class="tag-single">热门标签：</li>
-				<% 
-					var tags = d.tags;
-					for(var i= 0;i<tags.length;i++){%>
-					<li class="tag-single"> <a href="/tag/<%- tags[i]%>/"><%- tags[i]%></a> </li>
+		<%if(d.tags.length > 0){%>
+			<div id="tags-bar">
+					<ul class="tag-list">			
+						<li class="tag-single">热门标签：</li>
+					<% 
+						var tags = d.tags;
+						for(var i= 0;i<tags.length;i++){%>
+						<li class="tag-single"> <a href="/tag/<%- tags[i]%>/"><%- tags[i]%></a> </li>
 
-				<%}%> 
-				</ul>	 		
-		</div>
+					<%}%> 
+					</ul>
+					<div id="tags-close">
+						<i class="fa fa-remove"></i>
+					</div>	 		
+			</div>
+		<%}%>
 		<% include partial/footer %>
