--- a/views/admin/partial/nav.ejs
+++ b/views/admin/partial/nav.ejs
@@ -1,7 +1,10 @@
-<header class="am-topbar am-topbar-inverse">
+<header class="am-topbar am-topbar-inverse admin-header">
 	<h1 class="am-topbar-brand">
-		<a href="/admin/index" class="am-text-ir">晨迈世纪管理系统</a>
+   		<strong>38SR</strong> <small>管理后台</small> 
 	</h1>
+	 <button class="am-topbar-btn am-topbar-toggle am-btn am-btn-sm am-btn-success am-show-sm-only" data-am-collapse="{target: '#doc-topbar-collapse'}"><span class="am-sr-only">导航切换</span> <span class="am-icon-bars"></span></button>
+
+  <div class="am-collapse am-topbar-collapse" id="doc-topbar-collapse">
 	<ul class="am-nav am-nav-pills am-topbar-nav am-topbar-right admin-header-list">
 		<li><a href="/"><span class="am-icon-home"></span> 网站主页 </a>
 		</li>
@@ -21,4 +24,6 @@
 			</a>
 		</li>
 	</ul>
+    </div>
 </header>
+ 
