--- a/views/admin/partial/pagination.ejs
+++ b/views/admin/partial/pagination.ejs
@@ -7,7 +7,7 @@
 	if(typeof(curpath) === 'undefined'){
 		curpath = '';
 	}
-	%>
+	%> 	
 	<ul class="am-pagination am-fr admin-content-pagination"> 
 		<% if(curpage == 1 ){ %>
 			<li class="am-disabled"><a>上一页</a></li>
@@ -22,46 +22,46 @@
 				<li><a href="<%= curpath %>?p=<%= j %>"><%= j %></a></li>
 				<%}
 			}%>
-			<% }else{
-				if( (parseInt(curpage)-1) <= 4){
-					for(var j=1;j<=displaypage;j++){
-						if( j == curpage ){%>
-							<li class="am-active"><a><%= j %></a></li>
-						<% }else{ %>
-							<li><a href="<%= curpath %>?p=<%= j %>"><%= j %></a></li>
-						<%}%>
+		<% }else{
+			if( (parseInt(curpage)-1) <= 4){
+				for(var j=1;j<=displaypage;j++){
+					if( j == curpage ){%>
+						<li class="am-active"><a><%= j %></a></li>
+					<% }else{ %>
+						<li><a href="<%= curpath %>?p=<%= j %>"><%= j %></a></li>
 					<%}%>
-							<li class="am-disabled"><a>...</a></li>
 				<%}%>
+						<li class="am-disabled"><a>...</a></li>
+			<%}%>
 
 
-					<% if( (page-parseInt(curpage)) <= 4 && (parseInt(curpage)-1) > 4){%>
+				<% if( (page-parseInt(curpage)) <= 4 && (parseInt(curpage)-1) > 4){%>
+				<li class="am-disabled"><a>...</a></li>
+				<% for(var j=page-displaypage;j<=page;j++){
+					if( j == curpage ){%>
+					<li class="am-active"><a><%= j %></a></li>
+					<% }else{ %>
+					<li><a href="<%= curpath %>?p=<%= j %>"><%= j %></a></li>
+					<%}
+				}%>
+
+				<% } %>
+
+				<% if( (page-parseInt(curpage)) > 4 && (parseInt(curpage)-1) > 4){%>
 					<li class="am-disabled"><a>...</a></li>
-					<% for(var j=page-displaypage;j<=page;j++){
+					<% for(var j=curpage-3;j<=parseInt(curpage)+3;j++){
 						if( j == curpage ){%>
 						<li class="am-active"><a><%= j %></a></li>
 						<% }else{ %>
 						<li><a href="<%= curpath %>?p=<%= j %>"><%= j %></a></li>
 						<%}
 					}%>
-
-					<% } %>
-
-					<% if( (page-parseInt(curpage)) > 4 && (parseInt(curpage)-1) > 4){%>
-						<li class="am-disabled"><a>...</a></li>
-						<% for(var j=curpage-3;j<=parseInt(curpage)+3;j++){
-							if( j == curpage ){%>
-							<li class="am-active"><a><%= j %></a></li>
-							<% }else{ %>
-							<li><a href="<%= curpath %>?p=<%= j %>"><%= j %></a></li>
-							<%}
-						}%>
-						<li class="am-disabled"><a>...</a></li>
-					<% } %>
+					<li class="am-disabled"><a>...</a></li>
 				<% } %>
-					<% if( curpage < page ){%>
-						<li><a href="<%= curpath %>?p=<%= (parseInt(curpage)+1) %>">下一页</a></li>
-					<% }else{%>
-						<li class="am-disabled"><a>&raquo;</a></li>
-					<% } %> 
-				</ul> 
+		<% } %>
+		<% if( curpage < page ){%>
+			<li><a href="<%= curpath %>?p=<%= (parseInt(curpage)+1) %>">下一页</a></li>
+		<% }else{%>
+			<li class="am-disabled"><a>下一页</a></li>
+		<% } %> 
+	</ul> 
