--- a/views/admin/updatesite.ejs
+++ b/views/admin/updatesite.ejs
@@ -8,63 +8,67 @@
   <!-- sidebar end -->
   <!-- content start -->
   <div class="admin-content">
-    <div class="am-cf am-padding">
-      <div class="am-fl am-cf"><strong class="am-text-primary am-text-lg">Site 更新 </strong><small>/ Site 更新</small></div>
-    </div>
-    <div class="am-u-sm-12 am-u-md-6">
-      <div class="am-btn-toolbar">
-        <div class="am-btn-group am-btn-group-xs">
-          <a type="button" class="am-btn am-btn-default" href="/admin/addsiteindex"><span class="am-icon-plus"></span> 新增</a> 
+    <div class="admin-content-body">
+      <div class="am-cf am-content-head">
+        <strong class="am-text-primary am-text-lg">Site 更新 </strong><small>/ Site 更新</small>
+      </div>
+      <div class="am-g am-margin-top"> 
+        <div class="am-u-sm-12 am-u-md-6">
+          <div class="am-btn-toolbar">
+            <div class="am-btn-group am-btn-group-xs">
+              <a type="button" class="am-btn am-btn-default" href="/admin/addsiteindex"><span class="am-icon-plus"></span> 新增</a>
+            </div>
+          </div>
         </div>
+      </div>
+      
+      <div class="am-g am-margin-top">        
+        <div class="am-u-sm-12">
+          <div class="am-alert " id="notice" style="display:none" role='alert'>
+          </div>
+          <div class="am-form am-form-horizontal">
+            <div class="am-g am-margin-top">
+              <div class="am-u-sm-4 am-u-md-2 am-text-right">
+                网站域名
+              </div>
+              <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
+                <input type="text" class="am-input-sm" id="sndomain" name="sndomain" placeholder="网站域名">
+              </div>
+            </div>
+            <div class="am-g am-margin-top">
+              <div class="am-u-sm-4 am-u-md-2 am-text-right">
+                网站名字
+              </div>
+              <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
+                <input type="text" class="am-input-sm" id="snname" name="snname" placeholder="网站名字">
+              </div>
+            </div>
+            <div class="am-g am-margin-top">
+              <div class="am-u-sm-4 am-u-md-2 am-text-right">
+                网站简介
+              </div>
+              <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
+                <input type="text" class="am-input-sm" id="snbrief" name="snbrief" placeholder="网站简介">
+              </div>
+            </div>
+            <div class="am-g am-margin-top">
+              <div class="am-u-sm-4 am-u-md-2 am-text-right">
+                网站图片
+              </div>
+              <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
+                <input type="text" class="am-input-sm" id="snpic" name="snpic" placeholder="网站图片">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="am-g">
+        <div class="am-margin">
+          <button type="button" class="am-btn am-btn-primary am-btn-xs"  id="updatesite">提交保存</button>
+        </div>
+        
       </div>
     </div>
-    
-    <div class="am-u-sm-12">
-      <div class="am-alert " id="notice" style="display:none" role='alert'>
-      </div>
-      <div class="am-form am-form-horizontal">
-        <div class="am-g am-margin-top">
-          <div class="am-u-sm-4 am-u-md-2 am-text-right">
-            网站域名
-          </div>
-          <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-            <input type="text" class="am-input-sm" id="sndomain" name="sndomain" placeholder="网站域名">
-          </div>
-        </div>
-        <div class="am-g am-margin-top">
-          <div class="am-u-sm-4 am-u-md-2 am-text-right">
-            网站名字
-          </div>
-          <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-            <input type="text" class="am-input-sm" id="snname" name="snname" placeholder="网站名字">
-          </div>
-        </div>
-        <div class="am-g am-margin-top">
-          <div class="am-u-sm-4 am-u-md-2 am-text-right">
-            网站简介
-          </div>
-          <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-            <input type="text" class="am-input-sm" id="snbrief" name="snbrief" placeholder="网站简介">
-          </div>
-        </div>
-        <div class="am-g am-margin-top">
-          <div class="am-u-sm-4 am-u-md-2 am-text-right">
-            网站图片
-          </div>
-          <div class="am-u-sm-8 am-u-md-4 am-u-end col-end">
-            <input type="text" class="am-input-sm" id="snpic" name="snpic" placeholder="网站图片">
-          </div>
-        </div>  
-      </div>
-
-      <div class="am-margin">
-        <button type="button" class="am-btn am-btn-primary am-btn-xs"  id="updatesite">提交保存</button> 
-      </div>
-
-    </div>
-    
     <!-- content end -->
-  </div>
-</div>
-</body>
+  </body>
 </html>
